# aiomexc

./: pyproject.toml
aiomexc/: client.py
aiomexc/methods/: __init__.py  uid.py
aiomexc/types/: __init__.py  uid.py
