[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
name = "aiomexc"
version = "0.2.18"
description = "Asynchronous MEXC API wrapper"
readme = "README.md"
authors = [{ name = "Sheldy", email = "chikibamtioma@gmail.com" }]

keywords = ["mexc", "api", "client", "wrapper", "asyncio"]

requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Networking",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Environment :: Web Environment",
]

dependencies = [
    "adaptix~=3.0.0b11",
    "aiohttp~=3.11.13",
    "aiohttp-socks~=0.10.1",
    "certifi>=2023.7.22",
]

[project.scripts]
aiomexc = "aiomexc.__main__:main"

[project.optional-dependencies]
ws = ["pure_protobuf~=3.1.3"]
cli = ["questionary~=2.1.0"]

[project.urls]
Homepage = "https://github.com/sheldygg/aiomexc"
Documentation = "https://github.com/sheldygg/aiomexc"
Tracker = "https://github.com/sheldygg/aiomexc/issues"
Source = "https://github.com/sheldygg/aiomexc"

[tool.uv.build-backend]
module-root = "."
module-name = "aiomexc"

[tool.mypy]
files = ["aiomexc"]
strict = true
python_version = "3.11"
ignore_missing_imports = true
install_types = true
non_interactive = true

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false

[tool.ruff]
fix = true
line-length = 88
target-version = "py311"
include = [
    "aiomexc/**/*.py",
    "aiomexc/**/*.pyi",
    "tests/**/*.py",
    "docs/**/*.py",
    "pyproject.toml",
]
